<resources>
    <string name="app_name">lab1</string>
    <string name="title"><b> Бестиарий</b></string>
    <string name="title_card_text"><b>Полный</b> сборник\nвсех существ</string>
    <string name="title_card_sub_title">Постоянно обновляется</string>
    <string name="title_card_date">Последнее 2 марта</string>
    <string name="title_card_btn">Узнать больше</string>
    <string name="home">Главная</string>
    <string name="bottom_nav_bar_book">Бестиарий</string>
    <string name="bottom_nav_bar_person">Персонажи</string>
    <string name="bottom_nav_bar_memes">Мемы</string>
    <string name="bottom_nav_bar_youtube">Youtube</string>
    <string name="quoteAuthor">Автор : </string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>