<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/bestiariy"
        android:title="@string/bottom_nav_bar_book"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/person"
        android:title="@string/bottom_nav_bar_person"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/memes"
        android:title="@string/bottom_nav_bar_memes"/>
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/youtube"
        android:title="@string/bottom_nav_bar_youtube"/>
</menu>