<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/title"
        android:layout_marginBottom="@dimen/title_tile_margin_bottom"
        android:textSize="@dimen/very_big_in_sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/title_card_margin_bottom"
        style="@style/title_card">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/title_card_bg"
            android:scaleType="fitCenter"
            style="@style/title_card.bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/title_card_text_container_margin_start"
            android:layout_marginTop="@dimen/title_card_text_container_margin_top"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_card_text"
                android:textSize="@dimen/big_in_sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_card_sub_title"
                android:layout_marginTop="@dimen/title_card_text_description_margin_top"
                android:textSize="@dimen/medium_in_sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_card_date"
                android:layout_marginTop="@dimen/title_card_text_description_margin_top"
                android:textSize="@dimen/small_in_sp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/title_btn_height"
                android:layout_marginTop="@dimen/title_card_btn_margin_top"
                style="@style/title_card.white_text.btn"
                android:textSize="@dimen/small_in_sp"
                android:text="@string/title_card_btn" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>